Fix Bug 342471 - only one photo is kept from multiple photos

vcard spec allow multi photo/sound/logo
BUG: 342471
FIXED-IN: 14.12.3